--- a/students/brett-weisberg.html
+++ b/students/brett-weisberg.html
@@ -24,7 +24,7 @@
           <a href="#"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/rss-icon.png"/></a>
         </div>
         <div class="vitals-text-container">
-          <h1 class="profile-name">Daniel Fenjves</h1>
+          <h1 class="profile-name">Brett Weisberg</h1>
           <h2 class="profile-location">New York, NY</h2>
           <div class="profile-quote">"Forget safety. Live where you fear to live. Destroy your reputation. Be notorious." - Rumi</div>
         </div>
@@ -46,8 +46,8 @@
               <h3>Education</h3>
             </div>
             <div class="description-holder">
-              <h4>University of California</h4>
-              <h5>Bachelor of Economics</h5>
+              <h4>University of Arizona</h4>
+              <h5>Bachelor of Science</h5>
             </div>
             <div class="description-holder">
               <h4>San Diego State</h4>
