automatically backed up by learn

--- a/students/brett-weisberg.html
+++ b/students/brett-weisberg.html
@@ -26,7 +26,7 @@
         <div class="vitals-text-container">
           <h1 class="profile-name">Brett Weisberg</h1>
           <h2 class="profile-location">New York, NY</h2>
-          <div class="profile-quote">"Forget safety. Live where you fear to live. Destroy your reputation. Be notorious." - Rumi</div>
+          <div class="profile-quote">"The only way to do great work is to love what you do. If you haven't found it, keep looking. Don't settle." -Steve Jobs</div>
         </div>
       </div>
       <div class="details-container">
@@ -36,7 +36,7 @@
               <h3>Biography</h3>
             </div>
             <div class="description-holder">
-              <p>I was in southern California for college (sun and In-n-Out!), rural Oregon for high school (lived in a town with 1500 people and 3000+ cows), and Tokyo for elementary/middle school.</p>
+              <p> I am from the New York City area but have gone to school in many places. During college, I went to program in China, England and was based in Arizona. After college, I found my way back home but hope to one day live in Thailand! </p>
             </div>
           </div>
         </div>
@@ -50,8 +50,8 @@
               <h5>Bachelor of Science</h5>
             </div>
             <div class="description-holder">
-              <h4>San Diego State</h4>
-              <h5>Associate in Business</h5>
+              <h4>Fordham University</h4>
+              <h5>MBA</h5>
             </div>
           </div>
         </div>
@@ -61,12 +61,12 @@
               <h3>Experience</h3>
             </div>
             <div class="description-holder">
-              <h4>H&R Block</h4>
-              <h5>Project Manager</h5>
+              <h4>Macy's</h4>
+              <h5>Merchandise Planning</h5>
             </div>
             <div class="description-holder">
-              <h4>Coca-Cola Company</h4>
-              <h5>Account Manager</h5>
+              <h4>Ross Stores</h4>
+              <h5>Analyst</h5>
             </div>
           </div>
         </div>
