--- a/students/brett-weisberg.html
+++ b/students/brett-weisberg.html
@@ -36,7 +36,7 @@
               <h3>Biography</h3>
             </div>
             <div class="description-holder">
-              <p> I am from the New York City area but have gone to school in many places. During college, I went to program in China, England and was based in Arizona. After college, I found my way back home but hope to one day live in Thailand! </p>
+              <p> I am from the New York City area but have gone to school in many places. During college, I went to programs in China, England and was based in Arizona. After college, I found my way back home but hope to one day live in Thailand! </p>
             </div>
           </div>
         </div>
